# bologna-tari-voicebot-demo

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  ollama.Dockerfile  pyproject.toml  system_prompt.md
.scripts/: create_vapi_assistant.py
backend/: Dockerfile
backend/app/: database.py  main.py  rag.py  store.py
backend/app/domain/: availability.py  booking.py  dates.py  postgres_store.py  validators.py
backend/app/routes/: frontend.py
backend/app/tools/: check_availability.py  create_appointment.py  lookup_appointment.py  query_services.py
backend/ingest/: __main__.py  chunker.py  debug_scrape.py  embedder.py  pipeline.py  scraper.py
backend/tests/: conftest.py  test_availability.py  test_booking.py  test_chunking.py  test_dates.py  test_embedding.py  test_ingest_pipeline.py  test_store_contract.py  test_tools.py  test_validators.py
data/: tari_00_riduzione-tari-unico-occupante.json  tari_01_pagare-tassa-rifiuti-tari.json
docs/: ai-tools-used.md  choices-and-limitations.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AppointmentsSection.tsx  CallCard.tsx  LogsSection.tsx
frontend/src/hooks/: useFetch.ts
frontend/src/styles/: App.css
scripts/: delete_appointment.py  setup_vapi.py
vapi/: assistant.json
