[project]
name = "bologna-tari-voicebot"
version = "0.1.0"
description = "Italian voicebot for Bologna municipal TARI service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "httpx",
    "sqlalchemy>=2.0.51",
    "asyncpg",
    "psycopg[binary]>=3.3.4",
    "pgvector>=0.4.2",
    "scrapegraphai>=2.1.4",
    "openai>=2.43.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "python-dotenv",
    "requests",
    "aiosqlite",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
